--- a/html/_layouts/_layout-default.pug
+++ b/html/_layouts/_layout-default.pug
@@ -1,14 +1,4 @@
 extends ./_layout-root.pug
 
-block header
-
-block footer
-  footer
-    div
-      div &copy; Your Company. Design: <a href="https://templateflip.com/" target="_blank">TemplateFlip</a>
-      ul
-        li
-          a(href="#") Privacy & Terms
-
 block content
-  .container!= page.content
+  != page.content
