--- a/html/_layouts/_layout-root.pug
+++ b/html/_layouts/_layout-root.pug
@@ -7,9 +7,10 @@ html(lang='en-US')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     +titlemeta(page.title, site.title)
-    link(href='https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', rel='stylesheet',integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ", crossorigin="anonymous")
-    link(href='styles/main.css', rel='stylesheet')
+    link(href='/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/styles/main.css', rel='stylesheet')
     block styles
   body#top
       block header
