--- a/styles/main.scss
+++ b/styles/main.scss
@@ -43,7 +43,7 @@ body {
   background-size: cover;
   color: #fff;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  font-family: 'Quicksand', sans-serif;
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -52,7 +52,7 @@ body {
   width: 100%;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
-  background: rgba(22,22,22, 0.5);
+  background: rgba(48,53,70, 0.5);
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
@@ -101,6 +101,19 @@ body {
   font-weight: 500;
   text-transform: uppercase;
   border-radius: 40px;
+}
+
+.cover-heading {
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 15px;
+  font-size: 3rem;
+  margin-bottom: 5rem;
+}
+
+.cover-copy {
+  max-width: 500px;
+  margin: 0 auto 3rem;
 }
 
 
