Removing fit text

--- a/html/_layouts/_layout-root.pug
+++ b/html/_layouts/_layout-root.pug
@@ -9,8 +9,8 @@ html(lang='en-US')
     +titlemeta(page.title, site.title)
     link(href='https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700', rel='stylesheet')
     link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', rel='stylesheet')
-    link(href='/css/font-awesome.min.css', rel='stylesheet')
-    link(href='/styles/main.css', rel='stylesheet')
+    link(href='css/font-awesome.min.css', rel='stylesheet')
+    link(href='styles/main.css', rel='stylesheet')
     block styles
   body#top
       block header
@@ -19,6 +19,5 @@ html(lang='en-US')
       script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js")
       script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js")
       script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js")
-      script(src="/scripts/jquery.fittext.js")
-      script(src="/scripts/main.js")
+      script(src="scripts/main.js")
       block scripts
