--- a/styles/main.scss
+++ b/styles/main.scss
@@ -113,9 +113,17 @@ body {
 .cover-heading {
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 15px;
-  font-size: 3rem;
+  letter-spacing: 10px;
+  font-size: 2rem;
   margin-bottom: 5rem;
+}
+
+
+@media (min-width: 768px) {
+  .cover-heading {
+    font-size: 3.4rem;
+    letter-spacing: 15px;
+  }
 }
 
 .cover-copy {
