Updating Bootstrap Version

--- a/html/_layouts/_layout-root.pug
+++ b/html/_layouts/_layout-root.pug
@@ -8,7 +8,7 @@ html(lang='en-US')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     +titlemeta(page.title, site.title)
     link(href='https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700', rel='stylesheet')
-    link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css', rel='stylesheet')
+    link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css', rel='stylesheet')
     link(href='css/font-awesome.min.css', rel='stylesheet')
     link(href='styles/main.css', rel='stylesheet')
     block styles
@@ -16,8 +16,8 @@ html(lang='en-US')
       block header
       block content
       block footer
-      script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js")
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js")
-      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js")
+      script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js")
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js")
+      script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js")
       script(src="scripts/main.js")
       block scripts
